--- a/.build/.build.csproj
+++ b/.build/.build.csproj
@@ -8,11 +8,28 @@
     <NukeRootDirectory>..</NukeRootDirectory>
     <NukeScriptDirectory>..</NukeScriptDirectory>
     <NukeTelemetryVersion>1</NukeTelemetryVersion>
+    <LangVersion>latest</LangVersion>
+    <ImplicitUsings>disable</ImplicitUsings>
+    <DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nuke.Common" Version="6.0.0" />
-    <PackageDownload Include="GitVersion.Tool" Version="[5.8.0]" />
+    <PackageReference Include="Nuke.Common" />
+    <PackageReference Include="NuGet.CommandLine" ExcludeAssets="All" />
+    <PackageReference Include="JetBrains.ReSharper.GlobalTools" ExcludeAssets="All" />
+    <PackageReference Include="GitVersion.Tool" ExcludeAssets="All" />
+    <PackageReference Include="ReportGenerator" ExcludeAssets="All" />
+    <PackageReference Include="Rocket.Surgery.Nuke" />
+  </ItemGroup>
+
+  <ItemGroup>
+      <NukeSpecificationFiles Include="**\*.json" Exclude="bin\**;obj\**" />
+      <NukeExternalFiles Include="**\*.*.ext" Exclude="bin\**;obj\**" />
+      <None Remove="*.csproj.DotSettings;*.ref.*.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="..\.github\**\*.yml" />
   </ItemGroup>
 
 </Project>
