--- a/directory.packages.props
+++ b/directory.packages.props
@@ -12,6 +12,8 @@
     <PackageVersion Include="GitVersion.Tool" Version="5.9.0" />
     <PackageVersion Include="docfx.console" Version="2.59.0" />
     <PackageVersion Include="Nuke.Common" Version="6.0.1" />
+    <PackageVersion Include="NuGet.CommandLine" Version="5.8.1" />
+    <PackageVersion Include="JetBrains.ReSharper.GlobalTools" Version="2020.3.2" />
     <PackageVersion Include="ReportGenerator" Version="5.1.0" />
     <PackageVersion Include="Rocket.Surgery.Nuke" Version="0.17.6" />
   </ItemGroup>
@@ -35,7 +37,7 @@
   </ItemGroup>
   
   <Import
-        Project="$(MSBuildThisFileDirectory)/Directory.Packages.support.props"
-        Condition="Exists('$(MSBuildThisFileDirectory)/Directory.Packages.support.props')"
+        Project="$(MSBuildThisFileDirectory)/directory.Packages.support.props"
+        Condition="Exists('$(MSBuildThisFileDirectory)/directory.Packages.support.props')"
     />
 </Project>
