--- a/directory.packages.props
+++ b/directory.packages.props
@@ -19,7 +19,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageVersion Include="Xamarin.Forms" Version="5.0.0.2012"/>
+    <PackageVersion Include="Microsoft.Extensions.Configuration" Version="3.1.10" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="3.1.10" />
+    <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.10" />
+    <PackageVersion Include="ReactiveMarbles.Mvvm" Version="1.0.28" />
+    <PackageVersion Include="ReactiveMarbles.ObservableEvents.SourceGenerator" Version="1.1.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageVersion>
+    <PackageVersion Include="ReactiveUI.XamForms" Version="17.1.50" />
+    <PackageVersion Include="Splat.Microsoft.Extensions.Logging" Version="14.1.45" />
+    <PackageVersion Include="Splat.Microsoft.Extensions.DependencyInjection" Version="14.1.45" />
+    <PackageVersion Include="Xamarin.Forms" Version="5.0.0.2337"/>
   </ItemGroup>
 
   <ItemGroup>
@@ -29,8 +40,6 @@
     <PackageVersion Include="FluentAssertions" Version="6.5.1" />
     <PackageVersion Include="FluentAssertions.Analyzers" Version="0.16.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
-    <PackageVersion Include="Rocket.Surgery.Extensions.Testing.FakeItEasy" Version="6.1.1" />
-    <PackageVersion Include="Rocket.Surgery.Extensions.Testing.XUnit" Version="6.1.1" />
     <PackageVersion Include="xunit" Version="2.4.1" />
     <PackageVersion Include="xunit.analyzers" Version="0.10.0" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.3" />
