--- a/src/Versions/Versions.csproj
+++ b/src/Versions/Versions.csproj
@@ -10,6 +10,17 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
+        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
+        <PackageReference Include="ReactiveMarbles.Mvvm" />
+        <PackageReference Include="ReactiveMarbles.ObservableEvents.SourceGenerator">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="ReactiveUI.XamForms" />
+        <PackageReference Include="Splat.Microsoft.Extensions.Logging" />
+        <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" />
         <PackageReference Include="Xamarin.Forms" />
     </ItemGroup>
 </Project>
