--- a/src/Versions.iOS/Versions.iOS.csproj
+++ b/src/Versions.iOS/Versions.iOS.csproj
@@ -107,6 +107,7 @@
         <Reference Include="Xamarin.iOS" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" />
         <PackageReference Include="Xamarin.Forms" />
     </ItemGroup>
     <ItemGroup>
