--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,9 +26,30 @@ stages:
     pool:
       vmImage: 'macOS-11'
     jobs:
+      - job: InstallDotNet
+        displayName: 'InstallDotNet'
+        dependsOn: [  ]
+        steps:
+          - checkout: self
+            fetchDepth: 0
+          - task: Cache@2
+            displayName: Cache (nuke-temp)
+            inputs:
+              key: $(Agent.OS) | nuke-temp | **/global.json, **/*.csproj
+              restoreKeys: $(Agent.OS) | nuke-temp
+              path: .nuke/temp
+          - task: Cache@2
+            displayName: Cache (nuget-packages)
+            inputs:
+              key: $(Agent.OS) | nuget-packages | **/global.json, **/*.csproj
+              restoreKeys: $(Agent.OS) | nuget-packages
+              path: $(HOME)/.nuget/packages
+          - task: CmdLine@2
+            inputs:
+              script: './build.cmd InstallDotNet --skip'
       - job: Clean
         displayName: 'Clean'
-        dependsOn: [  ]
+        dependsOn: [ InstallDotNet ]
         steps:
           - checkout: self
             fetchDepth: 0
