--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,23 +30,12 @@ stages:
         displayName: 'InstallDotNet'
         dependsOn: [  ]
         steps:
-          - checkout: self
-            fetchDepth: 0
-          - task: Cache@2
-            displayName: Cache (nuke-temp)
+          - task: UseDotNet@2
+            displayName: 'Use .NET Core sdk'
             inputs:
-              key: $(Agent.OS) | nuke-temp | **/global.json, **/*.csproj
-              restoreKeys: $(Agent.OS) | nuke-temp
-              path: .nuke/temp
-          - task: Cache@2
-            displayName: Cache (nuget-packages)
-            inputs:
-              key: $(Agent.OS) | nuget-packages | **/global.json, **/*.csproj
-              restoreKeys: $(Agent.OS) | nuget-packages
-              path: $(HOME)/.nuget/packages
-          - task: CmdLine@2
-            inputs:
-              script: './build.cmd InstallDotNet --skip'
+              packageType: sdk
+              version: 6.0.x
+              installationPath: $(Agent.ToolsDirectory)/dotnet
       - job: Clean
         displayName: 'Clean'
         dependsOn: [ InstallDotNet ]
