--- a/src/Versions.iOS/Versions.iOS.csproj
+++ b/src/Versions.iOS/Versions.iOS.csproj
@@ -96,6 +96,32 @@
     </ItemGroup>
     <ItemGroup>
         <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\100.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\1024.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\120.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\128.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\152.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\16.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\167.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\172.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\180.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\196.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\20.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\216.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\256.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\29.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\32.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\40.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\48.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\512.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\55.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\58.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\60.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\64.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\76.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\80.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\87.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\88.png" />
         <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
             <Visible>false</Visible>
         </ImageAsset>
