--- a/.build/.build.csproj
+++ b/.build/.build.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="..\**\*.props" />
     <Content Include="..\.github\**\*.yml" />
   </ItemGroup>
 
