--- a/azure-pipelines.nuke.yml
+++ b/azure-pipelines.nuke.yml
@@ -25,11 +25,23 @@ steps:
     displayName: 'Clean'
   - pwsh: nuke Restore --skip --configuration '${{ parameters.Configuration }}' --verbosity '${{ parameters.Verbosity }}'
     displayName: '📪 Restore'
+  - pwsh: nuke InstallHomebrew --skip --configuration '${{ parameters.Configuration }}' --verbosity '${{ parameters.Verbosity }}'
+    displayName: 'InstallHomebrew'
+  - pwsh: nuke Homebrew --skip --configuration '${{ parameters.Configuration }}' --verbosity '${{ parameters.Verbosity }}'
+    displayName: 'Homebrew'
+  - pwsh: nuke InstallFastlane --skip --configuration '${{ parameters.Configuration }}' --verbosity '${{ parameters.Verbosity }}'
+    displayName: 'InstallFastlane'
   - pwsh: nuke ModifyInfoPlist --skip --configuration '${{ parameters.Configuration }}' --verbosity '${{ parameters.Verbosity }}'
     displayName: 'ModifyInfoPlist'
+  - pwsh: nuke FastlaneMatch --skip --configuration '${{ parameters.Configuration }}' --verbosity '${{ parameters.Verbosity }}'
+    displayName: 'FastlaneMatch'
+  - pwsh: nuke Fastlane --skip --configuration '${{ parameters.Configuration }}' --verbosity '${{ parameters.Verbosity }}'
+    displayName: 'Fastlane'
   - pwsh: nuke ArchiveIpa --skip --configuration '${{ parameters.Configuration }}' --verbosity '${{ parameters.Verbosity }}'
     displayName: 'ArchiveIpa'
   - pwsh: nuke XamariniOS --skip --configuration '${{ parameters.Configuration }}' --verbosity '${{ parameters.Verbosity }}'
     displayName: 'XamariniOS'
   - pwsh: nuke Default --skip --configuration '${{ parameters.Configuration }}' --verbosity '${{ parameters.Verbosity }}'
     displayName: 'Default'
+  - pwsh: nuke AzurePipelines --skip --configuration '${{ parameters.Configuration }}' --verbosity '${{ parameters.Verbosity }}'
+    displayName: 'AzurePipelines'
