--- a/src/Versions.iOS/Info.plist
+++ b/src/Versions.iOS/Info.plist
@@ -25,9 +25,9 @@
     <key>CFBundleDisplayName</key>
     <string>Versions</string>
     <key>CFBundleIdentifier</key>
-    <string>com.companyname.Versions.debug</string>
+    <string>com.companyname.versions.debug</string>
     <key>CFBundleVersion</key>
-    <string>1</string>
+    <string></string>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>CFBundleName</key>
@@ -35,6 +35,6 @@
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
     <key>CFBundleShortVersionString</key>
-    <string>0.1.1</string>
+    <string>0.1.0</string>
   </dict>
 </plist>
