--- a/azure-pipelines.nuke.yml
+++ b/azure-pipelines.nuke.yml
@@ -25,6 +25,8 @@ steps:
     displayName: 'Clean'
   - pwsh: nuke Restore --skip --configuration '${{ parameters.Configuration }}' --verbosity '${{ parameters.Verbosity }}'
     displayName: '📪 Restore'
+  - pwsh: nuke InstallFastlane --skip --configuration '${{ parameters.Configuration }}' --verbosity '${{ parameters.Verbosity }}'
+    displayName: 'InstallFastlane'
   - pwsh: nuke FastlaneMatch --skip --configuration '${{ parameters.Configuration }}' --verbosity '${{ parameters.Verbosity }}'
     displayName: 'FastlaneMatch'
   - pwsh: nuke Fastlane --skip --configuration '${{ parameters.Configuration }}' --verbosity '${{ parameters.Verbosity }}'
