--- a/src/Versions.iOS/Info.plist
+++ b/src/Versions.iOS/Info.plist
@@ -27,7 +27,7 @@
     <key>CFBundleIdentifier</key>
     <string>com.companyname.versions.debug</string>
     <key>CFBundleVersion</key>
-    <string></string>
+    <string>0.1.0.37</string>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>CFBundleName</key>
