--- a/src/Versions/Versions.csproj
+++ b/src/Versions/Versions.csproj
@@ -19,8 +19,10 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="ReactiveUI.XamForms" />
+        <PackageReference Include="Serilog.Sinks.AppCenter.Crash" />
         <PackageReference Include="Splat.Microsoft.Extensions.Logging" />
         <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" />
+        <PackageReference Include="Splat.Serilog" />
         <PackageReference Include="Xamarin.Forms" />
     </ItemGroup>
 </Project>
