--- a/directory.build.props
+++ b/directory.build.props
@@ -8,9 +8,12 @@
         <Nullable>enable</Nullable>
         <EnableNETAnalyzers>true</EnableNETAnalyzers>
         <NukeTelemetryVersion>1</NukeTelemetryVersion>
-        <!-- <ImplicitUsings>disable</ImplicitUsings>
-        <DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports> -->
     </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="stylecop.analyzers" />
+        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" />
+        <PackageReference Include="Roslynator.Analyzers" />
+    </ItemGroup>
     <ItemGroup>
         <None
             Include="$(MSBuildThisFileDirectory)/.nuke/temp/packageicon.png"
