--- a/directory.packages.props
+++ b/directory.packages.props
@@ -8,6 +8,13 @@
     <PackageVersion Include="Rocket.Surgery.MSBuild.Metadata" Version="1.1.0" />
     <PackageVersion Include="Rocket.Surgery.MSBuild.SourceLink" Version="1.1.0" />
   </ItemGroup>
+
+  <ItemGroup>
+      <PackageVersion Include="stylecop.analyzers" Version="1.1.1-beta.61" />
+      <PackageVersion Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.2" />
+      <PackageVersion Include="Roslynator.Analyzers" Version="2.2.0" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageVersion Include="GitVersion.Tool" Version="5.9.0" />
     <PackageVersion Include="docfx.console" Version="2.59.0" />
