--- a/src/Versions.iOS/Info.plist
+++ b/src/Versions.iOS/Info.plist
@@ -27,7 +27,7 @@
     <key>CFBundleIdentifier</key>
     <string>com.companyname.versions.debug</string>
     <key>CFBundleVersion</key>
-    <string>0.1.0.39</string>
+    <string>0.1.44-static-analysis.0</string>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>CFBundleName</key>
@@ -35,6 +35,6 @@
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
     <key>CFBundleShortVersionString</key>
-    <string>0.1.0</string>
+    <string>0.1.44</string>
   </dict>
 </plist>
