feature: Added GitVersionEx to extend GitVersion
brought PList Dependencies local for fixing an issue
changing fastlane execution in an attempt to build adhoc
changing ios configuration to build an ipa

--- a/src/Versions.iOS/Versions.iOS.csproj
+++ b/src/Versions.iOS/Versions.iOS.csproj
@@ -133,6 +133,7 @@
         <Reference Include="Xamarin.iOS" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="Serilog.Sinks.Xamarin" />
         <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" />
         <PackageReference Include="Xamarin.Forms" />
     </ItemGroup>
