build: fixing appsettings.json path

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ stages:
             inputs:
               folderPath: '$(System.DefaultWorkingDirectory)'
               fileType: 'json'
-              targetFiles: 'appsettings.json'
+              targetFiles: 'src/Versions/appsettings.json'
           - task: DotNetCoreCLI@2
             inputs:
               command: 'custom'
